--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,30 +1,27 @@
 name: generate animation
 
 on:
-  # 优化点1：调整定时任务语法
-  # 当前设置意为“每24小时的0分”，为使其每天在固定时间运行，可考虑改为 "0 0 * * *" (每天UTC 0点)
+  # run automatically every 24 hours
   schedule:
     - cron: "0 */24 * * *" 
+  
+  # allows to manually run the job at any time
   workflow_dispatch:
-  # 优化点2：确认分支名称匹配
-  # 请确保这里的分支名与您仓库的默认分支（如 main 或 master）一致
+  
+  # run on every push on the master branch
   push:
     branches:
-      - main  # 或 master，请按实际情况修改
+    - main
+    
+  
 
 jobs:
   generate:
-    # 优化点3：显式设置权限（关键修复）
-    permissions:
-      contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 10  # 略微增加超时时间
-
+    timeout-minutes: 10
+    
     steps:
-      # 优化点4：先检出代码库
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
@@ -32,7 +29,12 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+          
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
